UI 优化与双端发行版：MiniHttpServer 传输层 + PC 独立包 + Android 单机 APK
- UI：语义色（战斗红/奖励金/交互蓝）、移动端适配（44px 按钮/面板全屏）、动效反馈与减动效偏好

- 后端：自研 MiniHttpServer（ServerSocket）替换 JDK HttpServer，PC/Android 共用；Stream.toList 等 API 兼容修复；AI 客户端 Android 降级保护

- 新增 canglan-backend/android-app（WebView 壳 + 内嵌后端）、build-android.ps1（javac+d8+aapt2+apksigner 纯命令行）

- 新增 build-pc.ps1（jar+jlink 精简 JRE）、run-regress.js 一键回归；产物 dist/ 不入库

- 验证：七套回归 228 断言全绿，浏览器冒烟 7/7 通过，PC 包自测探活通过，APK 签名验证通过